--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
@@ -3,6 +3,7 @@ title = "०१"
 
 +++
 
+
 प्रथमः सर्गः।  
 मातापितृभ्यां जगतो नमो वामार्धजानये ।  
 सद्यो दक्षिणदृक्पातसंकुचद्वामदृष्टये ॥  
@@ -99,7 +100,8 @@ title = "०१"
   
 रेखामात्रमपि क्षुण्णादा मनोर्वर्त्मनः परम् ।  
 न व्यतीयुः प्रजास्तस्य नियन्तुर्नेमिवृत्तयः ॥ 17 ॥  
-रेखामात्रमिति॥ नियन्तुः शिक्षकस्य सारथेश्च तस्य दिलीपस्य संबन्धिन्यो नेमीनां चक्रधाराणां वृत्तिरिव वृत्तिर्व्यापारो यासां ताः। 'चक्रधारा प्रधिर्नेमिः' इति यादवः। 'चक्रं रथाङअगं तस्यान्ते नेमिः स्त्त्री स्यात्प्रधिः पुमान्' इत्यमरः। प्रजाः। आ मनोः,मनुमारभ्येत्यभिविधिः। पदद्वयं चैतत्। समासस्य विभाषितत्वात्। क्षुण्णादभ्यस्तात् प्रहताञ्च वर्त्मन आचारपद्धतेरध्वनश्च परमधिकम्। इतस्तत इत्यर्थः। रेखा प्रमाणमस्येति रेखामात्रं रेखाप्रमाणम्। ईषदपीत्यर्थः। 'प्रमाणे द्वयसच्-'(पा.5।2।37) इत्यादिना मात्रच्प्रत्ययः। परशब्दविशेषणं चैतत्। न व्यतीयुर्नातिक्रान्तवत्यः। कुशलसारथिप्रेरिता रथनेमय इव तस्य प्रजाः पूर्वक्षुण्णमार्गं न जहुरिति भावः॥ 17 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/17.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 प्रजानामेव भूत्यर्थं स ताभ्यो बलिमग्रहीत् ।  
 सहस्रगुणमुत्स्रष्टुमादत्ते हि रसं रविः ॥ 18 ॥  
@@ -295,11 +297,13 @@ title = "०१"
   
 त्वयैवं चिन्त्यमानस्य गुरुणा ब्रह्मयोनिना ।  
 सानुबन्धाः कथं न स्युः संपदो मे निरापदः ॥ 64 ॥  
-त्वयेति॥ ब्रह्मा योनिः कारणं यस्य तेन ब्रह्मपुत्रेण गुरुणा त्वया। एवमुक्तप्रकारेण चिन्त्यमानस्यानुध्यायमानस्य। अत एव निरापदो व्यसनहीनस्य मे संपदः सानुबन्धाः सानुस्यूतयः। अविच्छिन्ना इति यावत्। कथं न स्युः? स्युरेवेत्यर्थः। ॥ 64 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/64.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 संप्रत्यागमनप्रयोजनमाह-  
 किंतु वध्वां तवैतस्यामदृष्टसदृशप्रजम् ।  
 न मामवति सद्वीपा रत्नसूरपि मेदिनी ॥ 65 ॥  
-किंत्विति॥ किंतु तवैतस्यां वध्यां स्नुषायाम्। 'वधूर्जाया स्नुषा चैव'इत्यमरः। अदृष्टा सदृश्यनुरूपा प्रजा येन तं मां सद्वीपापि। रत्नानि सूयत इति रत्नसूरपि। 'सत्सूद्विष-'(पा.3।2।61) इत्यादिना क्विप्। मेदिनी नावति न प्रीणाति। 'अव'धातू रक्षणगति प्रीत्याद्यर्थेषूपदेशादत्र प्रीणने। 'रत्नसूरपि' इत्यनेन सर्वरत्नेभ्यः पुत्ररत्नमेव श्लाघ्यमिति सूचितम्॥ 65 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 तदेव प्रतिपादयति-  
 नूनं मत्तः परं वंश्याः पिण्डविच्छेददर्शिनः ।  
 न प्रकामभुजः श्राद्धे स्वधासंग्रहतत्पराः ॥ 66 ॥  
@@ -311,12 +315,13 @@ title = "०१"
   
 सोऽहमिज्याविशुद्धात्मा प्रजालोपनिमीलितः ।  
 प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ 68 ॥  
-सोऽहमिति॥ इज्या यागः। 'व्रजयजोर्भावे क्यप्' (पा.3।3।98) इति क्यप्प्रत्ययः। तया विशुद्धात्मा विशुद्धचेतनः प्रजालोपेन संतत्यभावेन निमीलितः कृतनिमीलनः सोऽहम्। लोक्यत इति लोकः। न लोक्यत इत्यलोकः। लोकश्चालोकश्चात्र स्त इति लोकश्चासावलोकश्चेति वा लोकालोकश्चक्रैवालोऽचल इव। 'लोकालोकश्चक्रवालः' इत्यमरः। प्रकाशत इति प्रकाशश्च देवर्णविमोचनात्। न प्रकाशत इत्यप्रकाशश्च पितॄणाविमोचनात्। पचाद्यच्। अस्मीति शेषः। लोकालोकोऽप्यन्तः सूर्यसंपर्काद्बहिस्तमोव्याप्त्या च प्रकाशश्चाप्रकाशश्चेति मन्तव्यम्॥ 68 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 ननु तपोदानादिसंपन्नस्य किमपत्यैरित्यत्राह-  
 लोकान्तरसुखं पुण्यं तपोदानसमुद्भवम् ।  
 संततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ 69 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-लोकान्तरेति॥ समुद्भवत्यस्मादिति समुद्भवः कारणम्। तपोदाने समुद्भवो यस्य तत् तपोदानसमुद्भवं यत्पुण्यं तल्लोकान्तरे परलोके सुखं सुखकरम्। शुद्धवंशे भवा शुद्धवंश्या संततिर्हि परत्र परलोक इह च लोके शर्मणे सुखाय। 'शर्मशातसुखानि च' इत्यमरः। भवतीति शेषः॥ 69 ॥  
 तया हीनं विधातर्मां कथं पश्यन्न दूयसे? ।  
 सिक्तं स्वयमिव स्नेहाद्वन्ध्यमाश्रमवृक्षकम् ॥ 70 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -331,12 +336,13 @@ title = "०१"
   
 इति विज्ञापितो राज्ञा ध्यानस्तिमितलोचनः ।  
 क्षणमात्रमृषिस्तस्थौ सुप्तमीन इव ह्रदः ॥ 73 ॥  
-इतीति॥ इति राज्ञा विज्ञापित ऋषिर्ध्यानेन स्तिमिते लोचने यस्य ध्यानस्तिमितलोचनो निश्चलाक्षः सन् क्षणमात्रम्। सुप्तमीनो ह्रद इव। तस्थौ॥ 73 ॥
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+
 
 सोऽपश्यत्प्रणिधानेन संततेः स्तम्भकारणम् ।  
 भावितात्मा भुवो भर्तुरथैनं प्रत्यबोधयत् ॥ 74 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-स इति॥ स मुनिः प्रणिधानेन चित्तैकाग्र्येण भावितात्मा शुद्धान्तःकरणो भुवो भर्तुर्नृपस्य संततेः स्तम्भकारणं संतानप्रतिबिन्धकारणमपश्यत्। अथानन्तरमेनं नृपं प्रत्यबोधयत्। स्वदृष्टं ज्ञापितवानित्यर्थः। एनमिति 'गतिबुद्धि-' (पा.1।4।52) इत्यादिनाणि कर्तुः कर्मत्वम् ॥ 74 ॥  
 पुरा शक्रमुपस्थाय तवोर्वीं प्रति यास्यतः ।  
 आसीत्कल्पतरुच्छायामाश्रिता सुरभिः पथि ॥ 75 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -353,7 +359,8 @@ title = "०१"
 कथं तदस्माभिर्न श्रुतमित्यह-  
 स शापो न त्वया राजन्न च सारथिना श्रुतः ।  
 नदत्याकाशगङ्गायाः स्रोतस्युद्दामदिग्गजे ॥ 78 ॥  
-स इति॥ हे राजन्! स शापस्त्वया न श्रुतः। सारथिना च न श्रुतः। अथवणे हेतुमाह-क्रीडार्थमागता उद्दामानो दाम्न उद्गता दिग्गजा यस्मिंस्तथोक्त आकाशगङ्गाया मन्दाकिन्याः स्रोतसि प्रवाहे नदति सति ॥ 78 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/78.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 अस्तु; प्रस्तुते किमायातमित्यत्राह-  
 ईप्सितं तदवज्ञानाद्विद्धि सार्गलमात्मनः ।  
@@ -402,10 +409,12 @@ title = "०१"
 गवानुसरणप्रकारमाह-  
 प्रस्थितायां प्रतिष्ठेथाः स्थितायां स्थितिमाचरेः ।  
 निषण्णायां निषीदास्यां पीताम्भसि पिबेरपः ॥ 89 ॥  
-प्रस्थितेति॥ अस्यां नन्दिन्यां प्रस्थितायां प्रतिष्ठेथाः प्रयाहि। 'समवप्रविभ्यः स्थः'(पा.1।3।22) इत्यात्मनेपदम्। स्थितायां निवृत्तगतिकायां स्थितिमाचरेः स्थितिं कुरु। तिष्ठेत्यर्थः। निषण्णायामुपविष्टायां निषीदोपविश। विध्यर्थे लोट्। पीतमम्भो यया तस्यां पीताम्भसि सत्यामपः पिबेः पिब। ॥ 89 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/89.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 वधूर्भक्तिमती चैनामर्चितामा तपोवनात् ।  
 प्रयता प्रातरन्वेतु सायं प्रत्युद्व्रजेदपि ॥ 90 ॥  
-वधूरिति॥ वधूर्जाया च भक्तिमती प्रयता सती गन्धादिभिरर्चितामेनां गां प्रातरा तपोवनात्। आङ् मर्यादायाम्। पदद्वयं चैतत्। अन्वेत्वनुगच्छतु। सायमपि प्रत्युद्व्रजेत् प्रत्युद्गच्छेत्। विध्यर्थे लिङ् ॥ 90 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 इत्या प्रसादादस्यास्त्वं परिचर्यापरो भव ।  
 अविघ्नमस्तु ते स्थेयाः पितेव धुरि पुत्रिणाम् ॥ 91 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -426,5 +435,6 @@ title = "०१"
 मध्यास्य प्रयतपरिग्रहद्वितीयः ।  
 तच्छिष्याध्ययननिवेदितावसानां  
 संविष्टः कुशशयने निशां निनाय ॥ 95 ॥  
-निर्दिष्टामिति॥ स राजा कुलपतिना मुनिकुलेश्वरेण वसिष्ठेन निर्दिष्टां पर्णशालामध्यास्याधिष्टाय। तस्यामधिष्ठानं कृत्वेत्यर्थः। 'अधिशीङ्-' (पा.1।4।46) इत्यादिनाधारस्य कर्मत्वम्। कर्मणि द्वितीया। प्रयतो नियतः परिग्रहः पत्नी द्वितीयो यस्येति स तथोक्तः। कुशानां शयने संविष्टः सुप्तः सन्। तस्य वसिष्टस्य शिष्याणामध्ययनेनापररात्रवेदपाठेन निवेदितमवसानं यस्यास्तां निशां निनाय गमयामास। अपररात्राध्ययने मनुः-(4।99) 'निशान्ते न परिश्रान्तो ब्रह्माधीत्य पुनः स्वपेत्'। 'न चापररात्रमधीत्य पुनः स्वपेत्' इति गौतमश्च। प्रहर्षिणीवृत्तमेतत्। तदुक्तम्-'म्नौ ज्रौ गस्त्त्रिदशयतिः प्रहर्षिणीयम्'॥ 95 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 इति महोपाध्यायकोलाचलमल्लिनाथसूरिविरचितया संजीवननीसमाख्यया व्याख्याया समेतो महाकविश्रीकालिदासकृतौ रघुवंशे महाकाव्ये वसिष्ठाश्रमाभिगमनो नाम प्रथमः सर्गः।  
