--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02.md
@@ -3,6 +3,7 @@ title = "०२"
 
 +++
 
+
 द्वितीयः सर्गः।  
 आशासु राशीभवदङ्गवल्लीभासैव दासीकृतदुग्धसिन्धुम् ।  
 मन्दस्मितैर्निन्दितशारदेन्दुं वन्देऽरविन्दासनसुन्दरि! त्वाम् ॥  
@@ -105,7 +106,8 @@ title = "०२"
   
 इत्थं व्रतं धारयतः प्रजार्थं समं महिण्या महनीयकीर्तेः ।  
 सप्त व्यतीयुस्त्त्रिगुणानि तस्य दिनानि दीनोद्धरणोचितस्य ॥ 25 ॥  
-इत्थमिति॥ इत्थमनेन प्रकारेण प्रजार्थं संतानाय महिष्या सममभिषिक्तपत्न्या सह। 'कृताभिषेका महिषी'इत्यमरः। व्रतं धारयतः। महनीया पूज्या कीर्तिर्यस्य तस्य दीनानामुद्धरणं दैन्दविमोचनम्। तत्रोचितस्य परिचितस्य तस्य नृपस्य। त्रयो गुणा आवृत्तयो येषां तानि त्रिगुणानि त्रिरावृत्तानि सप्त दिनान्येकविंशतिदिनानि व्यतीयुः ॥ 25 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/25.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 अन्येद्युरात्मानुचरस्य भावं जिज्ञासमाना मुनिहोमधेनुः ।  
 गङ्गाप्रपातान्तविरूढशष्पं गौरीगुरोर्गह्वरमाविवेश ॥ 26 ॥  
@@ -211,7 +213,8 @@ title = "०२"
   
 निशम्य देवानुचरस्य वाचं मनुष्यदेवः पुनरप्युवाच ।  
 धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरां दयासुः ॥ 52 ॥  
-निशम्येति॥ देवानुचरस्येश्वरकिंकरस्य सिंहस्य वाचं निशम्य,मनुष्यदेवो राजा पुनरप्युवाच। किंभूतः सन्? तेन सिंहेन यदध्यासितं व्याक्रमणम्। नपुंसके भावे क्तः। तेन कातरे अक्षिणी यस्यास्तया। 'बहुव्रीहौ सक्थ्यक्ष्णोः स्वाङ्गात्षच्'(पा.5।4।113) इति षच्। 'षिद्गौरादिभ्यश्च'(पा.4।1।41) इति ङीष्। 'किंवा वक्ष्यति' इति मीत्यैवं स्थितयेत्यर्थः। धेन्वा निरीक्ष्यमाणः। अत एव सुतरां दयालुः सन्। 'सुतराम्' इत्यत्र 'द्विवचनविभज्य-'(पा.4।1।41) इत्यादिना सुशब्दात्तरप्। 'किमेत्तिङव्यय-'(पा.5।4।11) इत्यादिनाम्प्रत्ययः। 'तद्धितश्चासर्वविभक्तिः'(पा.1।1।38) इत्यव्ययसंज्ञा ॥ 52 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/52.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 किमुवाचेत्याह-  
 क्षतात्किल त्रायत इत्युदग्रः क्षत्त्रस्य शब्दो भुवनेषु रूढः ।  
@@ -268,6 +271,7 @@ title = "०२"
 तत इति॥ ततो मानितार्थी। स्वहस्तार्जितो वीर इति शब्दो येन सः। एतेनास्य दातृत्वं दैन्यराहित्यं चोक्तम्। स राजा हस्तौ समानीय संधाय। अञ्जलिं बद्ध्वेत्यर्थः। वंशस्य कर्तारं प्रवर्तयितारम्। अत एव रघुकुलमिति प्रसिद्धिः। अनन्तकीर्तिं स्थिरयशसं तनयं सुदक्षिणायां ययाचे ॥ 64 ।  
 संतानकामाय तथेति कामं राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
 दुग्ध्वा पयः पत्रपुटे मदीयं पुत्रोपभुङ्क्ष्वेति तमादिदेश ॥ 65 ॥  
+  
 संतानेति॥ सा पयस्विनी गौः। संतानं कामयत इति ह्यंतानकामः। 'कर्मण्यण्'(पा.3।2।1)तस्मै राज्ञे तथेति। काम्यत इति कामो वरः। कर्मार्थे घञप्रत्ययः। तं प्रतिश्रुत्य प्रतिज्ञाय,'हे पुत्र!मदीयं पयः पत्रपुटे पत्रनिर्मिते पात्रे दुग्ध्वोपभुङ्क्ष्व पिब' इति तमादिदेशाज्ञापितवती। 'उपयुङ्क्ष्व' इति वा पाठः॥ 65 ॥    
 वत्सस्य होमार्थविधेश्च शेषमृषेरनुज्ञामधिगम्य मातः ।  
 ऊधस्यमिच्छामि तवोपभोक्तुं षष्ठांशमुर्व्या इव रक्षितायाः ॥ 66 ॥  
