--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03.md
@@ -3,6 +3,7 @@ title = "०३"
 
 +++
 
+
 तृतीयः सर्गः  
 उपाधिगम्योऽप्यनुपाधिगम्यः समावलोक्योऽप्यसमावलोक्यः ।  
 भवोऽपि योऽभूदभवः शिवोऽयं जगत्यपायादपि नः स पायात् ॥  
@@ -67,6 +68,7 @@ title = "०३"
 दिश इति॥ तत्क्षणं तस्मिन्क्षणे। 'कालाध्वनोरत्यन्तसंयोगे द्वितीया' (पा.2।3।5)दिशः प्रसेदुः प्रसन्ना बभूवुः। मरुतो वाताः सुखा मनोहरा ववुः। अग्निः प्रदक्षिणार्चिः सन् हविराददे स्वीचकार । इत्थँ सर्वं शुभशंसि शुभसूचकं बभूव। तथा हि-तादृशां रघुप्रकाराणां भवो जन्म लोकाभ्युदयाय। भवतीति शेषः। ततो देवा अपि संतुष्टा इत्यर्थः। 3.14 ॥  
 अरिष्टशय्यां परितो विसारिणा सुजन्मनस्तस्य निजेन तेजसा ।  
 निशीथदीपाः सहसा हतत्विषो बभूवुरालेख्यसमर्पिता इव ॥ 15 ॥  
+  
   
 अरिष्टेति॥ 'अरिष्टं सूतिकागृहम्' इत्यमरः। अरिष्टे सूतिकागृहे शय्यां तल्पं परितः सर्वतः। 'अभितः परितः समयानिकषाप्रतियोगेऽपि'(वा.1422) इति द्वितीया। विसारिणा। सुजन्मनः शोभनोत्पत्तेः। 'जनुर्जननजन्मानि जनिरुत्पत्तिरुद्भवः' इत्यमरः। तस्य शिशोर्निजेन नैसर्गिकेण तेजसा सहसा हतत्विषः क्षीणकान्तयो निशीथदीपा अर्धरात्रप्रदीपाः 'अर्धरात्रनिशीथौद्वौ'इत्यमरः। आलेख्ये चित्रे समर्पिता इव बभूवुः। 'निशीथ'शब्दो दीपानां प्रभाधिक्यसंभावनार्थः॥ 15 ॥  
 जनाय शुद्धान्तचराय शंसते कुमारजन्मामृतसंमिताक्षरम् ।  
@@ -209,8 +211,8 @@ title = "०३"
   
 अतोऽयमश्वः कपिलानुकारिणा पितुस्त्वदीयस्य मयापहारितः ।  
 अलं प्रयत्नेन तवात्र मा निधाः पदं पदव्यां सगरस्य संततेः ॥ 50 ॥  
-अत इति। अतोऽहमेव शतक्रतुरतस्त्वदीयस्य पितुरयं शततमोऽश्वः कपिलानुकारिणा कपिलमुनितुल्येन मयाऽपहारितोऽपहृतः। अपहारित इति स्वार्थे णिच्। तवात्राश्वे प्रयत्नेनालम्;प्रयत्नो माकारीत्यर्थः। निषेध्यस्य निषेधं प्रति करणत्वात्तृतीया। सगरस्य राज्ञः संततेः संतानस्य पदव्यां पदं मा निधा न निधेहि। निपूर्वाद्धाधातोर्लुङ्। 'न माङ्योगे'(पा.6।4।74) इत्यडागमप्रतिषेधः। महदास्कन्दनं ते विनाशमूलं भवेदिति भावः ॥ 50 ॥  
-ततः प्रहस्यापभयः पुरंदरं पुनर्बभाषे तुरगस्य रक्षिता ।  
+अत इति॥ अतोऽहमेव शतक्रतुरतस्त्वदीयस्य पितुरयं शततमोऽश्वः कपिलानुकारिणा कपिलमुनितुल्येन मयाऽपहारितोऽपहृतः। अपहारित इति स्वार्थे णिच्। तवात्राश्वे प्रयत्नेनालम्;प्रयत्नो माकारीत्यर्थः। निषेध्यस्य निषेधं प्रति करणत्वात्तृतीया। सगरस्य राज्ञः संततेः संतानस्य पदव्यां पदं मा निधा न निधेहि। निपूर्वाद्धाधातोर्लुङ्। 'न माङ्योगे'(पा.6।4।74) इत्यडागमप्रतिषेधः। महदास्कन्दनं ते विनाशमूलं भवेदिति भावः ॥ 50 ॥  
+ततः प्रहस्यापभयः पुरंदरं पुनर्बभाषे तुरगस्य रक्षिता ।   ॥ 50 ॥
 गृहाण शस्त्त्रं यदि सर्ग एष ते न खल्वनिर्जित्य रघुं कृती भवान् ॥ 51 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/51.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
