--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07.md
@@ -5,6 +5,7 @@ title = "०७"
 
 
 
+
 सप्तमः सर्गः ।  
 भजेमहि निपीयैकं मुहुरन्यं पयोधरम् ।  
 मार्गन्तं बालमालोक्याश्वासयन्तौ हि दंपती ॥  
@@ -253,7 +254,7 @@ title = "०७"
   
 प्रियंवदात्प्राप्तमसौ कुमारः प्रायुङ्क्त राजस्वधिराजसूनुः ।  
 गान्धर्वमस्त्रं कुसुमास्त्रकान्तः प्रस्वापनं स्वप्ननिवृत्तलौल्यः ॥ 61 ॥  
-प्रियंवदादिति। अधिराजसूनुर्महाराजपुत्रः कुसुमास्त्रकान्तो मदनसुन्दरः स्वप्ननिवृत्तलौल्यः स्वप्नवितृष्णः। जागरूक इत्यर्थः। असौ कुमारोऽजः प्रियंवदात्पूर्वोक्ताद्गन्धर्वात्प्राप्तं गान्धर्वं गन्धर्वदेवताकम्। 'सास्य देवता' (पा.4।2।24) इत्यण्। प्रस्वापयतीति प्रस्वापनं निद्राजनकमस्त्रं राजसु प्रायुङ्क्त प्रयुक्तवान् ॥ 61 ॥  
+प्रियंवदादिति॥ अधिराजसूनुर्महाराजपुत्रः कुसुमास्त्रकान्तो मदनसुन्दरः स्वप्ननिवृत्तलौल्यः स्वप्नवितृष्णः। जागरूक इत्यर्थः। असौ कुमारोऽजः प्रियंवदात्पूर्वोक्ताद्गन्धर्वात्प्राप्तं गान्धर्वं गन्धर्वदेवताकम्। 'सास्य देवता' (पा.4।2।24) इत्यण्। प्रस्वापयतीति प्रस्वापनं निद्राजनकमस्त्रं राजसु प्रायुङ्क्त प्रयुक्तवान् ॥ 61 ॥  
 ततो धनुष्कर्षणमूढहस्तमेकांसपर्यस्तशिरस्त्रजालम् ।  
 तस्थौ ध्वजस्तम्भनिषण्णदेहं निद्राविधेयं नरदेवसैन्यम् ॥ 62 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/07/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
