--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08.md
@@ -4,6 +4,7 @@ title = "०८"
 +++
 
 
+
 अष्टमः सर्गः।  
 हेरम्बमवलम्बेऽहं यस्मिन्पातालकेलिषु ।  
 दन्तेनोदस्यति क्षोणीं विश्राम्यन्ति फणीश्वराः ॥  
@@ -103,7 +104,8 @@ title = "०८"
   
 अथ काश्चिदजव्यपेक्षया गमयित्वा समदर्शनः समाः ।  
 तमसः परमापदव्ययं पुरुषं योगसमाधिना रघुः ॥ 24 ॥  
-अथेति॥ अथ रघुः समदर्शनः सर्वभूतेषु समदृष्ठिः सन्नजव्यपेक्षयाऽजाकाङ्क्षानुरोधेन काश्चित्समाः कतिचिद्वर्षाणि। 'समा वर्षं समं तुल्यम्' इति विश्वः। गमयित्वा नीत्वा योगसमाधिनैक्यानुसंधानेन। 'संयोगो योग इत्युक्तो जीवात्मपरमात्मनोः'इति वसिष्ठः। अव्ययमविनाशिनं तमसः परमविद्यायाः परम्। मायातीतमित्यर्थः। पुरुषं परमात्मानम्। आपात् प्राप। सायुज्यं प्राप्त इत्यर्थः॥ 24 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/24.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 श्रउतदेहविसर्जनः पितुश्चिरमश्रूणि विमुच्य राघवः ।  
 विदधे विधिमस्य नैष्ठिकं यतिभिः सार्धमनग्निमग्निचित् ॥ 25 ॥  
@@ -180,11 +182,12 @@ title = "०८"
   
 विललाप स बाष्पगद्गदं सहजामप्यपहाय धीरताम् ।  
 अभितप्तमयोऽपि मार्दवं भजते कैव कथा शरीरिषु ॥ 43 ॥  
-विललापेति॥ सोऽजः सहजां स्वाभाविकीमपि धीरतां धैर्यमपहाय विप्रकीर्य बाष्पेण कण्ठगतेन गद्गदं विशीर्णाक्षरं यथा तथा ध्वनिमात्रानुकारिगद्गदशब्दैर्विललाप प्ररिदेवितवान्। 'विलापः परिदेवनम्' इत्यमरः। अभितप्तमग्निना संतप्तमयो लोहमचेतनमपि मार्दवं मृदुत्वमवैरत्वं च भजते प्राप्नोति। शरीरिषु देहिषु। अभिसंतप्तेष्विति शेषः। विषये कैव कथा वार्ता? अनुक्तसिद्धमित्यर्थः ॥ 43 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/43.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 कुसुमान्यपि गात्रसंगमात्प्रभवन्त्यायुरपोहितुं यदि ।  
 न भविष्यति हन्त साधनं किमिवान्यत्प्रहरिष्यतो विधेः ॥ 44 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-कुसुमानीति॥ कुसुमानि पुष्पाण्यपि। 'अपि' शब्दो नितान्तमार्दवद्योतनार्थः। गात्रसंगमाद्देहसंसर्गादायुरपोहितुमपहर्तुं प्रभवन्ति यदि। हन्त विषादे। 'हन्त हर्षेऽनुकम्पायां वाक्यारम्भविषादयोः'इत्यमरः। प्रहरिष्यतो हन्तुमिच्छतो विधेर्दैवस्यान्यत् कुसुमातिरिक्तं किमिव वस्तु। 'इव'शब्दो वाक्यालंकारे। कीदृशमित्यर्थः। साधनं प्रहरणं न भविष्यति न भवेत्? सर्वमपि साधनं भविष्यत्येवेत्यर्थः ॥ 44 ॥  
 अथवा मृदु वस्तु हिंसितुं मृदुनैवारभते प्रजान्तकः ।  
 हिमसेकविपत्तिरत्र मे नलिनी पूर्वनिदर्शनं मता ॥ 45 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -244,11 +247,11 @@ title = "०८"
 पृषतीषु विलोलमीक्षितं पवनाधूतलतासु विभ्रमाः ॥ 59 ॥  
 त्रिदिवोत्सुकयाप्यवेक्ष्य मां निहिताः सत्यममी गुणास्त्वया ।  
 विरहे तव मे गुरुव्यथं हृदयं न त्ववलम्बितुं क्षमाः ॥ 60 ॥  
-कलमिति॥ त्रिदिवेति॥ युग्मम्। उभयोरेकान्वयः। अन्यभृतासु कोकिलासु कलं मधुरं भाषितं भाषणम्। कलहंसीषु विशिष्टहंसीषु मदालसं मन्थरं गतं गमनम्। पृषतीषु हरिणीषु विलोलमीक्षितं चञ्चला दृष्टिः। पवनेन वायुना धूतलतास्वीषत्कम्पितलतासु विभ्रमा विलासाः। इत्यमी पूर्वोक्ताः कलभाषणादयो गुणाः। एषु कोकिलादिस्थानेष्विति शेषः। त्रिदिवोत्सुकयापीह जीवन्त्येव स्वर्गं प्रति प्रस्थितयापि त्वया मामवेक्ष्य विरहासहं विचार्य सत्यं निहिताः। मत्प्राणधारणोपायतया स्थापिता इत्यर्थथः। तव विरहे गुरुव्यथमतिदुःखं मे हृदयं मनोऽवलम्बितुं स्थापयितुं न क्षमा न शक्ताः। ते तु तत्संगम एव सुखकारणः,नान्यथा। प्रत्युत प्राणानपहरन्तीति भावः ॥ 59-60 ॥  
-मिथुनं परिकल्पितं त्वया सहकारः फलिनी च नन्विमौ । ॥ 60 ॥  
-अविधाय विवाहसत्क्रियामनयोर्गम्यत इत्यसांप्रतम् ॥ 61 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-मिथुनमिति॥ ननु हे प्रिये! सहकारस्तरुविशेषः फलिनी प्रियंगुलता चेमौ त्वया मिथुनं परिकल्पितं मिथुनत्वेनाभ्यमानि। अनयोः फलिनी-सहकारयोर्विवाहसत्क्रियां विवाहमङ्गलमविधायाकृत्वा गम्यत इत्यसांप्रतमुक्तम्। मातृहीनानां न किंचित्सुखमस्तीति भावः ॥ 61 ॥  
+अविधाय विवाहसत्क्रियामनयोर्गम्यत इत्यसांप्रतम् ॥ 61 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 कुसुमं कृतदोहदस्त्वया यदशोकोऽयतमुदीरयिष्यति ।  
 अलकाभरणं कथं नु तत्तव नेष्यामि निवापमाल्यताम्? ॥ 62 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/08/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
