--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09.md
@@ -4,6 +4,7 @@ title = "०९"
 +++
 
 
+
 नवमः सर्गः।  
 एकलोचनमेकार्धे सार्धलोचनमन्यतः ।  
 नीलार्धं नीलकण्ठार्धं महः किमपि मन्महे ॥  
@@ -146,11 +147,12 @@ title = "०९"
   
 श्रुतिसुखभ्रमरस्वनगीतयः कुसुमकोमलदन्तरुचो बभुः ।  
 उपवनान्तलताः पवनाहतैः किसलयैः सलयैरिव पाणिभिः ॥ 35 ॥  
-श्रुतीति॥ श्रुतिसुखाः कर्णमधुरा भ्रमरस्वना एव गीतयो यासां ताः। कुसुमान्येव कोमला दन्तरुचो दन्तकान्तयो यासां ताः। अनेन सस्मितत्वं विवक्षितम्। उपवनान्तलताः पवनेनाहतैः कम्पितैः किसलयैः सलयैः साभिनयैः। 'लय' शब्देन लयानुगतोऽभिनयो लक्ष्यते। उपवनान्ते पवनाहतैरिति सक्रियत्वाभिधानात्। पाणिभिरिव बभुः। अनेन तलानां नर्तकीसाम्यं गम्यते ॥ 35 ॥     
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/35.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+     
 ललितविभ्रमबन्धविचक्षणं सुरभिगन्धपराजितकेसरम् ।  
 पतिषु निर्विविशुर्मधुमङ्गनाः स्मरसखं रसखण्डनवर्जितम् ॥ 36 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/36.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-ललितेति॥ अङ्गना ललितविभ्रमबन्धविचक्षणं मधुरविलासघटनापटुतरम्। सुरभिणा मनोहरेण गन्धेन पराजितकेसरं निर्जितबकुलपुष्पम्। 'अथ केसरे। बकुलः' इत्यमरः। स्मरस्य सखायं स्मरसखम्। स्मरोद्दीपकमित्यर्थः। मधुं मद्यम्। 'अर्धर्चाः पुंसि च'(पा.2।4।31) इति पुंसिङ्गता। उक्तं च-'मकरन्दस्य मद्यस्य माक्षिकस्यापि वाचकः। अर्धर्चादिगणे पाठान्पुंसकयोर्मधुः॥' इति। पतिषु विषये रसखण्डनवर्जितमनुरागभङ्गरहितं यथा तथा निर्विविशुः। परस्परानुरागपूर्वकं पतिभिः सह पपुरित्यर्थः ॥ 36 ॥  
 शुशुभिरे स्मितचारुतराननाः स्त्रिय इव श्लथशिञ्जितमेखलाः ।  
 विकचतामरसा गृहदीर्घिका मदकलोदकलोलविहंगमाः ॥ 37 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/37.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -255,13 +257,14 @@ title = "०९"
      द्विध्यन्तमुद्धृतसटाः प्रतिहन्तुमीषुः ।  
 नात्मानमस्य विविदुः सहसा वराहा  
       वृक्षेषु विद्धमिषुभिर्जघनाश्रयेषु ॥ 60 ॥  
-तमिति॥ वराहाः। वाहनादश्वादीषदवनतोत्तरकायं किंचिदानतपूर्वकायं विध्यन्तं प्रहरन्तं तं नृपम्। उद्धृतसटा ऊर्ध्वकेसराः सन्तः। 'सटा जटाकेसरयोः' इति केशवः। प्रतिहन्तुमीषुः प्रतिहर्तुमैच्छन्। अस्य नृपस्येषुभिः सहसा जघनानामाश्रयेष्ववष्टम्भेषु वृक्षेषु विद्धमात्मानं न विविदुः। एतेन वराहाणां मनस्वित्वं नृपस्य हस्तलाघवं चोक्तम् ॥ 60 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 तेनाभिघातरभसस्य विकृष्य पत्री  
       वन्यस्य नेत्रविवरे महिषस्य मुक्तः ।  
 निर्भिद्य विग्रहमशोणितलिप्तपुङ्ख-  
       स्तं पातयां प्रथममास पपात पश्चात् ॥ 61 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-तेनेति॥ अभिघातो सभस औत्सुक्यं यस्य तस्य। अभिहन्तुमुद्यतस्येत्यर्थः। वन्यस्य वने भवस्य महिषस्य नेत्रविवरे नेत्रमध्ये तेन नृपेण विकृष्याकृष्य मुक्तः पत्री शरो विग्रहं महिषदेहं निर्भिद्य विदार्य। शोणितलिप्तो न भवतीत्यशोणितलिप्तः पुङ्खो यस्य स तथोक्तः सन्। तं महिषं प्रथमं पातयाभवतीत्यशोणितलिप्तः पुङ्खो यस्य स तथोक्तः सन्। तं महिषं प्रथमं पातयामास। स्वयं पश्चात्पपात। 'कृञ्चानुप्रयुज्यते लिटि'(पा.3।1।40)इत्यत्रानुशब्दस्य व्यवहितविपर्यस्तप्रयोगनिवृत्त्यर्थत्वात् 'पातयां प्रथममास' इत्यपप्रयोग  इति पाणिनीयाः। यथाह वार्तिककारः-'विपर्यासनिवृत्त्यर्थः व्यवहितवृत्त्यर्थं च' इति ॥ 61 ॥  
 प्रायो विषाणपरिमोक्षलघूत्तमाङ्गा-  
       न्खङ्गांश्चकार नृपतिर्निक्षितैः क्षुरप्रैः ।  
 श्रृङ्गं स दृप्तविनयाधिकृतः परेषा-  
@@ -313,11 +316,12 @@ title = "०९"
   
 कुम्भपूरणभवः पटुरुञ्चैरुञ्चचार निनदोऽम्भसि तस्याः ।  
 तत्र स द्विरदबृंहितशङ्की शब्दपातिनमिषुं विससर्ज ॥ 73 ॥  
-कुम्भेति॥ तस्यास्तमसाया अम्भसि कुम्भपूरणेन भव उत्पन्नः। पचाद्यच्। पटुर्मधुरः। उञ्चैर्गम्भूरो निनदो ध्वनिरुञ्चचारोदियाय। तत्र निनदे स नृपः। द्विरदबृंहितं शङ्कत इति द्विरदबृंहितशङ्की सन्,शब्देन शब्दानुसारेण तपतीति शब्दपातिनमिषुं विससर्ज। स्वागतावृत्तम् ॥ 73 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 नृपतेः प्रतिषिद्धमेव तत्कृतवान्पङ्क्तिरथो विलङ्घ्य यत् ।  
 अपथे पदमर्पयन्ति हि श्रुतवन्तोऽपि रजोनिमीलिताः ॥ 74 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/09/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-नृपतेरिति॥ तत्कर्म नृपतेः क्षत्रियस्य प्रतिषिद्धमेव निषिद्धमेव यदेतत्‌करम् गजवधरूपं पङ्क्तिरथो दशरथो विलङघ्‌य 'लक्ष्मी कामो युद्धादन्यत्र करिवधं न कुर्यात्' इति शास्त्रमुल्लङ्घअय कृतवान्। ननु विदुषस्तस्य कथमीदृग्विचेष्टितमत आह-अपथ इति। श्रुतवन्तोऽपि विद्वांसोऽपि रजोनिमीलिता रजोगुणावृताः सन्तः। न पन्था इत्यपथम्। 'पथो विभाषा'(पा.5।4।72) इति वा समासान्तः। 'अपथं नपुंसकम्'(पा.2।4।30)इति नपुंसकम्। 'अपन्थास्त्वपथं तुल्ये'इत्यमरः। तस्निन्नपथेऽमार्गे पदमर्पयन्ति हि निक्षिपन्ति हि। प्रवर्तन्त इत्यर्थः। वैतालीयं वृत्तम् ॥ 74 ॥  
 हा तातेति क्रन्दितमाकर्ण्य विषण्ण-  
        स्तस्यान्विष्यन्वेतसगूढं प्रभवं सः ।  
 शल्यप्रोतं प्रेक्षअय सकुम्भं मुनिपुत्रं  
