--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13.md
@@ -3,6 +3,7 @@ title = "१३"
 
 +++
 
+
 त्रयोदशः सर्गः।  
 त्रैलोक्यशल्योद्धरणाय सिन्धोश्चकार बन्धं मरणं रिपूणाम् ।  
 पुण्यप्रणामं भुवनाभिरामं रामं विरामं विपदामुपासे ॥  
@@ -180,11 +181,12 @@ title = "१३"
   
 वाचंयमत्वात्प्रणतिं ममैष कम्पेन किंचित्प्रतिगृह्य मूर्ध्नः ।  
 दृष्टिं विमानव्यवधानमुक्तां पुनः सहस्रार्चिषि संनिधत्ते ॥ 44 ॥  
-वाचंयमेति॥ एष सुतीक्ष्णः। वाचं यच्छतीति वाचंयमो मौनव्रती। 'वाचि यमो व्रते'(पा.3।2।40)इति खच्प्रत्ययः। 'वाचंयमपुरंदरौ च' (पा.6।3।69)इति मुम्। तस्य भावस्तत्त्वान्मम प्रणतिं किंचिन्मूर्ध्नः कम्पेन प्रतिगृह्य विमानेन व्यवधानं तोरोधानं तस्मान्मुक्ताम्। अपेतापोढमुक्तपततित-'(पा.2।1।38) इत्यादिना पञ्चमीसमासः। दृष्टिं पुनः सहस्रार्चिषि सूर्ये संनिधत्ते । सम्यग्धत्त इत्यर्थः। अन्यथाऽकर्मकत्वप्रसङ्गात्' ॥ 44 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 अदः शरण्यं शरभङ्गनाम्नस्तपोवनं पावनमाहिताग्नेः ।  
 चिराय संतर्प्य समिद्भिरग्निं यो मन्त्रपूतां तनुमप्यहौषीत् ॥ 45 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-अद इति॥ शरणे रक्षणे साधु शरण्यम्। पावयतीति पावनम्। अदो दृश्यमानं तपोवनमाहिताग्नेः शरभङ्गनाम्नो मुनेः संबन्धि। यः शरभङ्गश्चिरायचिरमग्निं समिद्भिः संतर्प्य तर्पयित्वा ततो मन्त्रैः पूतां शुद्धां तनुमप्यहौषीद्धुतवान्। जुहोतेर्लुङ् ॥ 45 ॥  
 छायाविनीताध्वपरिश्रमेषु भूयिष्ठसंभाव्यफलेष्वमीषु ।  
 तस्यातिथीनामधुना सपर्या स्थइता सुपुत्रेष्विव पादपेषु ॥ 46 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/46.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
