--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14.md
@@ -3,6 +3,7 @@ title = "१४"
 
 +++
 
+
 चतुर्दशः सर्गः।  
 संजीवनं मैथिलकन्यकायाः सौन्दर्यसर्वस्वमहानिधानम् ।  
 शशाङ्कपङ्केरुहयोः समानं रामस्य वन्दे रमणीयमास्यम् ॥  
@@ -235,6 +236,7 @@ title = "१४"
 आत्मानमेव स्थिरदुःखभाजं पुनः पुनर्दुष्कृतिनं निनिन्द ॥ 57 ॥  
 न चेति॥ आर्या साध्वी सीता वृजिनादृत एनसो विनापि। 'कलुषं वृजिनैनोऽघम्' इत्यमरः। 'अन्यारादितरर्ते-'(पा.2।3।29) इत्यादिना पञ्चमी। निराकरिष्णोर्निरासकस्य। 'अलंकृञ्-'(पा.3।2।136) इत्यादिनेष्णुच्प्रत्ययः। भर्तुरवर्णमपवादं न चावदन्नैवावादीत्। किंतु स्थिरदुःखभाजमत एव दुष्कृतिनमात्मानं पुनः पुनर्निनिन्द ॥ 58 ॥  
   
+  
 आश्वास्य रामावरजः सतीं तामाख्यातवाल्मीकिनिकेतमार्गः ।  
 निघ्नस्य मे भर्तृनिदेशरौक्ष्यं देवि! क्षमस्वेति बभूव नम्रः ॥ 58 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/58.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -333,7 +335,8 @@ title = "१४"
   
 तत्राभिषेकप्रयता वसन्ती प्रयुक्तपूजा विधिनातिथिभ्यः ।  
 वन्येन सा वल्कलिनी शरीरं पत्युः प्रजासंततये बभार ॥ 82 ॥  
-तत्रेति॥ तत्राश्रमेऽभिषेकेण स्नानेन प्रयता नियता वसन्ती विधइना शास्त्रेणातिथिभ्यः प्रयुक्तपूजा कृतसत्कारा वल्कलिनी सा सीता पत्युः प्रजासंततये संतानाविच्छेदाय हेतोः। वन्येन कन्दमूलादिना शरीरं बभार पुपोष ॥ 82 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/14/82.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 अपि प्रभुः सानुशयोऽधुना स्यात्किमुत्सुकः शक्रजितोऽपि हन्ता ।  
 शशंस सीतापरिदेवनान्तमनुष्ठितं शासनमग्रजाय ॥ 83 ॥  
