--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15.md
@@ -5,6 +5,7 @@ title = "१५"
 
 
 
+
 पञ्चदशः सर्गः।  
 आरण्यकं गृहस्थानं श्वशुरौ यद्रजःकणाः ।  
 स्वयमौद्वाहिकं गेहं तस्मै रामाय ते नमः ॥  
@@ -51,11 +52,11 @@ title = "१५"
   
 तस्य मार्गवशादेका बभूव वसतिर्यतः ।  
 रथस्वनोत्कण्ठमृगे वाल्मीकीये तपोवने ॥ 11 ॥  
-तस्येति॥ यतो गच्छतः। इण्धातोः शदृप्रत्ययः। तस्य शत्रुघ्नस्य मार्गवशाद्रथस्वन उत्कण्ठा उद्गीवा मृगा यस्मिंस्तस्मिन्वाल्मीकीये वाल्मीकिसंबन्धिनि। 'वृद्धाच्छः'(पा.4।2।114) इति छप्रत्ययः। तपोवन एका वसती रात्रिर्बभूव। तत्रैकां रात्रिमुषित इत्यर्थः। 'वसती रात्रिवेश्मनोः' इत्यमरः। 15.11 ॥  
-तमृषिः पूजयामास कुमारं क्लान्तवाहनम् । ॥ 11 ॥ 
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/11.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+ 
 तपःप्रभावसिद्धाभिर्विशेषप्रतिपत्तिभिः ॥ 12 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/12.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-तमिति॥ क्लान्तवाहनं श्रान्तयुग्यं तं कुमारं शत्रुघ्नमृषिर्वाल्मीकिस्तपः प्रभावसिद्धाभिर्विशेषप्रतिपत्तिभिरुत्कृष्टसंभावनाभिः पूजयामास ॥ 12 ॥  
 तस्यामेवस्य यामिन्यामन्तर्वत्नी प्रजावती ।  
 सुतावसूत संपन्नौ कोशदण्डाविव क्षितिः ॥ 13 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/13.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -80,11 +81,11 @@ title = "१५"
 दिष्ट्या त्वमसि मे धात्रा भीतेनेवोपपादितः ॥ 18 ॥  
 इति संतर्ज्य शत्रुघ्नं राक्षसस्तज्जिघांसया ।  
 प्रांशुमुत्पाटयामास मुस्तास्तम्बमिव द्रुमम् ॥ 19 ॥  
-नेति॥ इतीति॥ युग्मम्। राक्षसो लवणः। अद्य मत्कुक्षेः। भुज्यत इति भोजनम्। भोज्यं मृगादिकं नातिपर्याप्तमनतिसमग्रमालक्षअय दृष्ट्वा भीतेनेव धात्रा दिषअट्या भाग्येन मे त्वमुपपादितः कल्पितोऽसि। इति शत्रुघ्नं संतर्ज्य तस्य शत्रुघ्नस्य जिघांसया हन्तुमिच्छया प्रांशुमुन्नतं द्रुमम्। मुस्तास्तम्बमिव अक्लेशेनोत्पाटयामास ॥ 18-19 ॥  
-सौमित्रेर्निशितैर्बाणैरन्तरा शकलीकृतः ।  ॥ 19 ॥  
-गात्रं पुष्परजः प्राप न शाखी नैर्ऋतेरितः ॥ 20 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/19.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-सौमित्रेरिति॥ नैर्ऋतेरितो रक्षःप्रेरितः शाख्यन्तरा मध्ये निशइतैर्बाणैः शकलीकृतः सन्,सौमित्रेः शत्रुघ्नस्य गात्रं न प्राप। किंतु पुष्परजः प्राप ॥ 20 ॥  
+गात्रं पुष्परजः प्राप न शाखी नैर्ऋतेरितः ॥ 20 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/20.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
 विनाशात्तस्य वृक्षस्य रक्षस्तस्मै महोपलम् ।  
 प्रजिघाय कृतान्तस्य मुष्टिं पृथगिव स्थितम् ॥ 21 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/21.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -164,12 +165,13 @@ title = "१५"
   
 तमभ्यनन्दत्प्रणतं लवणान्तकमग्रजः ।  
 कालनेमिवधात्प्रीतस्तुराषाडिव शार्ङ्गिणम् ॥ 40 ॥  
-तमिति॥ अग्रजो रामो लवणस्यान्तकं हन्तारं प्रणतं तं शत्रुघ्नम्। कालनेमिर्नाम राक्षसः। तस्य वधात्प्रीतः। तुरं वेगं सहत इति तुराषाडिन्द्रः । 'छन्दसि सहः'(पा.3।2।63) इति ण्वि प्रत्यया। यद्वा,-सहतेणिंचि कृते साहयतेः क्विप्। 'अन्येषामपि दृश्यते'(पा.6।3।137) इति पूर्वपदस्य दीर्घः। 'सहेः साडः सः'(पा.8।3।56) इति षत्वम्। शार्ङ्गिणमुपेन्द्रमिव। अभ्यनन्दत्॥ ॥ 40 ॥   
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/40.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+   
 
 स पृष्टः सर्वतो वार्तमाख्यद्राज्ञे न संततिम् ।  
 प्रत्यर्पयिष्यतः काले करेराद्यस्य शासनात् ॥ 41 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/41.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
   
-स इति॥ स शत्रुघ्नः पृष्टः सन्। सर्वतो वार्तं कुशलं राज्ञे रामाय। आख्यदाख्यातवान्। चक्षिङो लुङ्। 'चक्षिडः ख्याञ्'(पा.2।4।54)इति ख्याञादेशः। 'अस्यतिवक्ति-'(पा.3।1।52)इत्यङ्। 'आतो लोप इटि च'(पा.6।4।64) इत्याकारलोपः। ख्यातेर्वा लुङ्। संततिं कुशलवोत्पत्तिं नाख्यत्। कुतः? कालेऽवसरे प्रत्यर्पयिष्यत आद्यस्य कवेर्वाल्मीकेः शासनात् ॥ 41 ॥  
 अथ जानपदो विप्रः शिशुमप्राप्तयौवनम् ।  
 अवतार्याङ्कशय्यास्थं द्वारि चक्रन्द भूपतेः ॥ 42 ॥  
 <div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/42.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
@@ -192,7 +194,8 @@ title = "१५"
   
 राजन्! प्रजासु ते कश्चिदपचारः प्रवर्तते ।  
 तमस्विष्य प्रशमयेर्भवितासि ततः कृती ॥ 47 ॥  
-राजन्निति॥ हे राजन्! ते प्रजासु कश्चिदपचारो वर्णधर्मव्यतिकरः प्रवर्तते। तमपचारमन्विष्य प्रशमयेः। ततः कृती कृतकृत्यो भवितासि भविष्यसि ॥ 47 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/47.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 इत्याप्तवचनाद्रामो विनेष्यन्वर्णविक्रियाम् ।  
 दिशः पपात पत्रेण वेगनिष्कम्पकेतुना ॥ 48 ॥  
@@ -221,6 +224,7 @@ title = "१५"
 रघुनाथोऽप्यगस्त्येन मार्गसंदर्शितात्मना ।  
 महौजसा संयुयुजे शरत्काल इवेन्दुना ॥ 54 ॥  
 रघुनाथ इति॥ रघुनाथोऽपि मार्गसंदर्शितात्मना महौजसाऽगस्त्येन। इन्दुना शरत्काल इव संयुयुजे संगतः। इन्दावपि विशेषणं योज्यम्‌। 'रघुनाथ' इत्यत्र क्षुभ्रादित्वाण्णत्वाभावः ॥ 55 ॥  
+  
   
 कुम्भयोनिरलंकारं तस्मै दिव्यपरिग्रहम् ।  
 ददौ दत्तं समुद्रेण पीतेनेवात्मनिष्क्रयम् ॥ 55 ॥  
@@ -320,7 +324,8 @@ title = "१५"
   
 तां दृष्टिविषये भर्तुर्मुनिरास्थितविष्टरः ।  
 कुरु निःसंशयं वत्से! स्ववृत्ते लोकमित्यशात् ॥ 79 ॥  
-तामिति॥ आस्थितविष्टरोऽधिष्ठितासनो मुनिः। हे वत्से! भर्तुर्दृष्टिविषये समक्षं स्ववृत्ते स्वचरिते विषये लोकं निःसंशयं कुरु। इति तां सीतामशाच्छास्ति स्म ॥ 79 ॥  
+<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/15/79.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+  
   
 अथ वाल्मीकिशिष्येण पुण्यमावर्जितं पयः ।  
 आचम्योदीरयामास सीता सत्यां सरस्वतीम् ॥ 80 ॥  
@@ -397,6 +402,7 @@ title = "१५"
 स इति॥ उदगिति च। युग्मम्। स्थिरधीः स रामः। रिपव एव नागा गजास्तेषामङ्कुशं निवारकं कुशं कुशावत्यां पुर्यां निवेश्य स्थापयित्वा। सूक्तैः समीचीनवचनैः सतां जनिता अश्रुलवा अश्रुलेशा येन तं लवं लवाख्यं पुत्रम्। 'लवो लेशे विलासे च छेदने रामनन्दने' इति विश्वः। शरावत्यां पुर्याम्। 'शरादीनां च'(पा.6।3।120)इति 'शर'-'कुश' शब्दयोर्दीर्घः। निवेश्य। सानुजोऽग्निपुरःसरः सन्। पत्यौ भर्तरि वात्सल्यादनुरागात्। गृहान् वर्जयित्वा गृहवर्जम्। 'द्वितीयायां च'(पा.3।4।53) इति णमुल्। अयं क्वचिदपरीप्सायामपीष्यते 'अनुदात्तं पदमेकवर्जम्'(पा.6।1।158) इत्येकाचः शेषतया व्याख्यातत्वात्। परीप्सा त्वरा। अयोध्ययान्वितोऽनुगत उदक्प्रतस्थे ॥ 97-98 ॥  
 जगृहुस्तस्य चित्तज्ञाः पदवीं हरिराक्षसाः ।  
 कदम्बमुकुलस्थूलैरभिवृष्टां प्रजाश्रुभिः ॥ 99 ॥  
+  
 जगृहुरिति॥ चित्तज्ञा हरिराक्षसाः कदम्बमुकुलस्थूलैः प्रजाश्रुभिरभिवृष्टां तस्य रामस्य पदवीं मार्गं जगृहुः। तेऽप्यनुजग्मुरित्यर्थः ॥ 99 ॥  
 उपस्थितविमानेन तेन भक्तानुकम्पिना ।  
 चक्रे त्रिदिवनिःश्रेणिः सरयूरनुयायिनाम् ॥ 100 ॥  
