--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/05.md
@@ -4,6 +4,7 @@ title = "०५"
 +++
 
 
+
 पञ्चमः सर्गः  
 इन्दीवरदलश्याममिन्दिरानन्दकन्दलम् ।  
 वन्दारुजनमन्दारं वन्देऽहं यदुनन्दनम् ॥  
@@ -174,7 +175,8 @@ title = "०५"
   
 स नर्मदारोधसि सीकरार्द्रैर्मरुद्भिरानर्तितनक्तमाले ।  
 निवेशयामास विलङ्घिताध्वा क्लान्तं रजोधूसरकेतु सैन्यम् ॥ 52 ॥  
-स इति॥ विलङ्घिताध्वाऽतिक्रान्तमार्गः सोऽजः सीकरार्द्रैः। शीतलैरित्यर्थः। मरुद्भिर्वातैरानर्तिताः कम्पिता नक्तमालाश्चिरबिल्वाख्यवृक्षभेदाः। 'चिरबिल्वो नक्तमालः करजश्च करञ्जके' इत्यमरः। यस्मिंस्तस्मिन्। निवेशार्ह इत्यर्थः। नर्मदाया रोधसि रेवायास्तीरे क्लान्तं श्रान्तं रजोभिर्धूसराः केतवो ध्वजा यस्य तत्सैन्यं निवेशयामास ॥ 42 ॥  
+स इति॥ विलङ्घिताध्वाऽतिक्रान्तमार्गः सोऽजः सीकरार्द्रैः। शीतलैरित्यर्थः। मरुद्भिर्वातैरानर्तिताः कम्पिता नक्तमालाश्चिरबिल्वाख्यवृक्षभेदाः। 'चिरबिल्वो नक्तमालः करजश्च करञ्जके' इत्यमरः। यस्मिंस्तस्मिन्। निवेशार्ह इत्यर्थः। नर्मदाया रोधसि रेवायास्तीरे क्लान्तं श्रान्तं रजोभिर्धूसराः केतवो ध्वजा यस्य तत्सैन्यं निवेशयामास ॥ 52 ॥  
+  
   
 अथोपरिष्टाद्भ्रमरैर्भ्रमद्भिः प्राक्सूचितान्तःसलिलप्रवेशः ।  
 निर्धौतदानामलगण्डभित्तिर्वन्यः सरित्तो गज उन्ममज्ज ॥ 43 ॥  
@@ -328,7 +330,8 @@ title = "०५"
      स्वकिरणपरिवेषोद्भेदशून्याः प्रदीपाः ।  
 अयमपि च गिरं नस्त्वत्प्रवोधप्रयुक्ता-  
       मनुवदति शुकस्ते मञ्जुवाक्यञ्जरस्थः ॥ 74 ॥  
-भवतीति। म्लानः पुष्पोपहारः पुष्पपूजा म्लानत्वादेव विरलभक्तिर्विरलरचनो भवति। प्रदीपाश्च स्वकिरणानां परिवेषस्य मण्डलस्योद्भेदेन स्फुरणेन शून्या भवन्ति,निस्तेजस्का भवन्तीत्यर्थः। अपि चायं मञ्जुवाङ्मधुरवचनः पञ्चरस्थस्ते तव शुकस्त्वत्प्रबोधनिमित्ते प्रयुक्तामुञ्चारितां नोऽस्माकं गिरं वाणीमनुवदति,अनुकृत्य वदतीत्यर्थः। इत्थं प्रभातलिङ्गानि वर्तन्ते, अतः प्रबोद्धव्यमिति भावः ॥ 74 ॥  
+भवतीति॥ म्लानः पुष्पोपहारः पुष्पपूजा म्लानत्वादेव विरलभक्तिर्विरलरचनो भवति। प्रदीपाश्च स्वकिरणानां परिवेषस्य मण्डलस्योद्भेदेन स्फुरणेन शून्या भवन्ति,निस्तेजस्का भवन्तीत्यर्थः। अपि चायं मञ्जुवाङ्मधुरवचनः पञ्चरस्थस्ते तव शुकस्त्वत्प्रबोधनिमित्ते प्रयुक्तामुञ्चारितां नोऽस्माकं गिरं वाणीमनुवदति,अनुकृत्य वदतीत्यर्थः। इत्थं प्रभातलिङ्गानि वर्तन्ते, अतः प्रबोद्धव्यमिति भावः ॥ 74 ॥  
+
 इति विरचितवाग्भिर्बन्दिपुत्रैः कुमारः  
       सपदि विगतनिद्रस्तल्पमुज्झांचकार ।  
 मदपटुनिनदद्भिर्बोधितो राजहंसैः  
